--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy":"http://localhost:5000",
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -30,11 +30,13 @@
   },
   "dependencies": {
     "apicache": "^1.6.3",
+    "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
-    "needle": "^3.2.0"
+    "needle": "^3.2.0",
+    "react-bootstrap": "^2.7.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
